Added a new geometry that is the max extent of all step extents to get all MODIS images with the same extent, so can stack them later. Also no need for lag folder in the end, just mix all exported images.

--- a/image_retrieval_ssf.ipynb
+++ b/image_retrieval_ssf.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "id": "44d48b54",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
+   "id": "81750ee4-fdec-410f-9257-c71fb514167e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "                \n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# create large extent = region geometry \n",
+    "\n",
+    "large_extent = extents_lut.iloc[-1]\n",
+    "\n",
+    "large_extent_coords = [[[large_extent.loc['xmin'], large_extent.loc['ymin']],\n",
+    "                        [large_extent.loc['xmin'], large_extent.loc['ymax']], \n",
+    "                        [large_extent.loc['xmax'], large_extent.loc['ymin']], \n",
+    "                        [large_extent.loc['xmax'], large_extent.loc['ymax']]]]\n",
+    "\n",
+    "large_region = ee.Geometry.Polygon(large_extent_coords, None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "88920f40",
    "metadata": {},
    "outputs": [
@@ -300,7 +354,7 @@
     "# get output folder paths for current MODIS images and images from week prior\n",
     "# source: https://github.com/gee-community/geemap/blob/master/examples/notebooks/11_export_image.ipynb\n",
     "out_dir = os.path.join(os.path.expanduser('~'), 'Documents/MSc_Thesis/data/modis_ssf')\n",
-    "out_dir_lag = os.path.join(os.path.expanduser('~'), 'Documents/MSc_Thesis/data/modis_ssf/lag')"
+    "#out_dir_lag = os.path.join(os.path.expanduser('~'), 'Documents/MSc_Thesis/data/modis_ssf/lag')"
    ]
   },
   {
@@ -536,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "df21c7ba",
    "metadata": {},
    "outputs": [
@@ -582,126 +636,126 @@
       "\n",
       "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_06.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/a6b898f8eec7b7ea9a7764113d0d6011-3f520f1fc33ab0b2d9608e50e8f99a62:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/1cde0d7241ba251261d0696332d59a03-b4e4c74219b65633ad3a588cbee7755e:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_06.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/lag/2008_10_30.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_10_30.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/dddc4303703095d30464c3243e78244f-dd6ea23b899cf7a77d3c292fb21b9548:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/207716a385157d07545b50be65fd5042-c5f0be63d30ee7ea083c177e578df72c:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/lag/2008_10_30.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_10_30.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
       "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_07.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/8b84bf015a75f660d04a5921bcc7815a-843c3ca61596e3dd6e45c4ce5707f0bc:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/9aa65c71f398abbc98804806a19d82f4-15fa60a1dc41ec7c61cdbfc06c443493:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_07.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/lag/2008_10_31.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_10_31.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/e8da87a05afa33932571a9893531b0c2-cc49e691a4ddf3156b1f79af73d4f8c6:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/61748a86d53c5fb93e86b70624c9d197-133efc70bd42c31eda838fffa2776dca:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/lag/2008_10_31.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_10_31.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
       "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_08.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/cf8685585661b740d5494dbe0f2e6386-9d238c1de9bdb568c2a601203878dca7:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/8bbd775b55f9494aec88f36f492a244c-c1c08248d75e5d08d17c893bd02945ec:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_08.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/lag/2008_11_01.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_01.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/4e98ec2ace8a3ad7fd0ec7c73b2f02b0-63c91fb82ca1f092d9768acfcfcf802a:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/e5a14e1e7c3cc9e62b610281ee6f1b50-4e3717ee823e88db51c382fa755ca825:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/lag/2008_11_01.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_01.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
       "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_09.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/840fae95ea88afc18126dfd9178f7a8c-ed3f948542188755d5051e533c948e6c:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/e4aee71db73f6a848fe75ab8c39275fc-00e8a3e91635bf0d8544ee13f0cc69ae:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_09.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/lag/2008_11_02.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_02.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/53e228e14db48220ecb6c42f68b29017-c49217cbe69a7b36eb33ed73d4985868:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/be71fb9390b0a87b535760e3aaea9a1e-b61092e6af7e0c9e4379181168b08c86:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/lag/2008_11_02.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_02.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
       "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_10.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/03dcaf967eff92ad1338da04eac493d7-35fb8566f1c5ba336574adc9f998ac7f:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/5f449c5a6fe15d73aff16d0860406e55-0381e0406bd3328fc69916ecae1d8191:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_10.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/lag/2008_11_03.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_03.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/d69ca65fbed270cff766f379b735f88b-7994726327528db3888007eb2e3e22e0:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/17dbb589c11523cf9e656a28ce9e74dc-d90495d757ce6a629421033d6a15bef5:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/lag/2008_11_03.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_03.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
       "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_11.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/1105e2c49a7c47a285c4e25639394f4e-e1c279462d93293116467f16a82a69ba:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/5acab5f27dc80abc9db2deeb1292fbcd-6109ea5e7c0c442c5946514ddb8926d3:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_11.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/lag/2008_11_04.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_04.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/ef35389bddb185061462b9c1c3e1d0b0-55a0122b93d9eb3c8595d1e3256d6b8f:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/69c041ac4f996616e542a846c8e88c6c-10e187cd0b9ab3cfa9bfbf9f202eaff3:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/lag/2008_11_04.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_04.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
       "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_12.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/17e327c740457fdb85762fffd7c162ee-6ec3369726ad14a68d6724e49a2013d2:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/6bf97a7560f373533ad00d433ff2d139-b13b16bc4c27e9d314cc14bc46a488d5:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_12.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/lag/2008_11_05.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_05.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/9fb696b62b3bfa1d2aa3817f9db79256-ef3b0b76ad07c20703c7132c7176f461:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/908ff0401890c70a1e3c7b90c9588b91-052bffd505d4b47ee42138c446269671:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/lag/2008_11_05.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_05.tif\n",
       "\n",
       "\n"
      ]
@@ -716,7 +770,7 @@
     "# 5. clip and reproject \n",
     "# 6. visualize\n",
     "\n",
-    "for i in range(len(extents_lut)):\n",
+    "for i in range(len(extents_lut)-1):\n",
     "    # select entry\n",
     "    extent = extents_lut.iloc[i]\n",
     "    \n",
@@ -770,9 +824,9 @@
     "    \n",
     "    # export MODIS image to local repository \n",
     "    # source: https://github.com/gee-community/geemap/blob/master/examples/notebooks/11_export_image.ipynb\n",
-    "    geemap.ee_export_image_collection(modis_ndvi, out_dir = out_dir)\n",
+    "    geemap.ee_export_image_collection(modis_ndvi, out_dir = out_dir, region = large_region)\n",
     "    \n",
-    "    geemap.ee_export_image_collection(modis_ndvi_prev_week, out_dir = out_dir_lag)\n",
+    "    geemap.ee_export_image_collection(modis_ndvi_prev_week, out_dir = out_dir, region = large_region)\n",
     "    "
    ]
   }
