Reprojected MODIS images to EPSG:32733 (local projection), since did the same for elephant fixes.

--- a/image_retrieval_ssf.ipynb
+++ b/image_retrieval_ssf.ipynb
@@ -455,9 +455,9 @@
     }
    ],
    "source": [
-    "# function to reproject (32733 if want Namibia coordinates, but elephant fixes are in 4326)\n",
+    "# function to reproject (elephant fixes reprojected from 4326 to 32733 same needs to be done to images) \n",
     "def reprojectModis(image):\n",
-    "    return image.reproject('EPSG:4326', None, 250)\n"
+    "    return image.reproject('EPSG:32733', None, 250)\n"
    ]
   },
   {
