Forgot to specify projection of extent geometries (since no longer default projection), had to deactivate evenOdd parameter when defining new geometry.

--- a/image_retrieval_ssf.ipynb
+++ b/image_retrieval_ssf.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "id": "44d48b54",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "id": "81750ee4-fdec-410f-9257-c71fb514167e",
    "metadata": {},
    "outputs": [
@@ -306,12 +306,12 @@
     "                        [large_extent.loc['xmax'], large_extent.loc['ymin']], \n",
     "                        [large_extent.loc['xmax'], large_extent.loc['ymax']]]]\n",
     "\n",
-    "large_region = ee.Geometry.Polygon(large_extent_coords, None)"
+    "large_region = ee.Geometry.Polygon(large_extent_coords, proj = 'EPSG:32733', evenOdd = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "id": "88920f40",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "id": "0e27b3e3",
    "metadata": {},
    "outputs": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "df21c7ba",
    "metadata": {},
    "outputs": [
@@ -636,7 +636,7 @@
       "\n",
       "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_06.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/1cde0d7241ba251261d0696332d59a03-b4e4c74219b65633ad3a588cbee7755e:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/93daa4af9d71ac0c5cd90642d5a93890-0251f020c6356099a39cd6f4784a5530:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_06.tif\n",
       "\n",
@@ -645,7 +645,7 @@
       "\n",
       "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_10_30.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/207716a385157d07545b50be65fd5042-c5f0be63d30ee7ea083c177e578df72c:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/2f1c6df2154670d0344622236e801293-dc429deb9105735ac3a9a2b76595d11a:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_10_30.tif\n",
       "\n",
@@ -654,7 +654,7 @@
       "\n",
       "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_07.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/9aa65c71f398abbc98804806a19d82f4-15fa60a1dc41ec7c61cdbfc06c443493:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/ef96402c7440382787b1b494dcf67931-ce41e5218f87e861f38a794448b0ff4f:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_07.tif\n",
       "\n",
@@ -663,7 +663,7 @@
       "\n",
       "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_10_31.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/61748a86d53c5fb93e86b70624c9d197-133efc70bd42c31eda838fffa2776dca:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/cecd391904223d4162c63c77ddfdf22d-c0c2a410e8e8cc16675c5d685f90d2b6:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_10_31.tif\n",
       "\n",
@@ -672,7 +672,7 @@
       "\n",
       "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_08.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/8bbd775b55f9494aec88f36f492a244c-c1c08248d75e5d08d17c893bd02945ec:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/59da31ee78da861d118e228449d521a0-e3023799da9fafffdd33a0f88ffc2112:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_08.tif\n",
       "\n",
@@ -681,7 +681,7 @@
       "\n",
       "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_01.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/e5a14e1e7c3cc9e62b610281ee6f1b50-4e3717ee823e88db51c382fa755ca825:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/f340dd731c2eaa48fe898f925b7bfdcd-91c36932418d2ccf9da191e76711dfad:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_01.tif\n",
       "\n",
@@ -690,7 +690,7 @@
       "\n",
       "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_09.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/e4aee71db73f6a848fe75ab8c39275fc-00e8a3e91635bf0d8544ee13f0cc69ae:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/0a21b46bfe6d707f3ca1d9d7aecc0db0-b0f8570bc8d02d34e0e4f3ac8c8062da:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_09.tif\n",
       "\n",
@@ -699,7 +699,7 @@
       "\n",
       "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_02.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/be71fb9390b0a87b535760e3aaea9a1e-b61092e6af7e0c9e4379181168b08c86:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/919aa897ff5f98d87a5b2237c7db1e0d-4f859fd89784aec689886ba087e862bc:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_02.tif\n",
       "\n",
@@ -708,7 +708,7 @@
       "\n",
       "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_10.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/5f449c5a6fe15d73aff16d0860406e55-0381e0406bd3328fc69916ecae1d8191:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/061f77657f4841b558b1b6a737816872-d5f43408955b878aa222dc6862fc9a70:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_10.tif\n",
       "\n",
@@ -717,46 +717,12 @@
       "\n",
       "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_03.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/17dbb589c11523cf9e656a28ce9e74dc-d90495d757ce6a629421033d6a15bef5:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/a1a22f007cb87e8c3e0f8de503aa8a9c-203028723480d9bbd9f0e55c602a6307:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_03.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
-      "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_11.tif\n",
-      "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/5acab5f27dc80abc9db2deeb1292fbcd-6109ea5e7c0c442c5946514ddb8926d3:getPixels\n",
-      "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_11.tif\n",
-      "\n",
-      "\n",
-      "Total number of images: 1\n",
-      "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_04.tif\n",
-      "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/69c041ac4f996616e542a846c8e88c6c-10e187cd0b9ab3cfa9bfbf9f202eaff3:getPixels\n",
-      "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_04.tif\n",
-      "\n",
-      "\n",
-      "Total number of images: 1\n",
-      "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_12.tif\n",
-      "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/6bf97a7560f373533ad00d433ff2d139-b13b16bc4c27e9d314cc14bc46a488d5:getPixels\n",
-      "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_12.tif\n",
-      "\n",
-      "\n",
-      "Total number of images: 1\n",
-      "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_05.tif\n",
-      "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/908ff0401890c70a1e3c7b90c9588b91-052bffd505d4b47ee42138c446269671:getPixels\n",
-      "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_05.tif\n",
-      "\n",
       "\n"
      ]
     }
@@ -790,17 +756,17 @@
     "              [extent.loc['xmax'], extent.loc['ymin']]]]\n",
     "\n",
     "    # create geometry from coordinates\n",
-    "    bbox = ee.Geometry.Polygon(coords, None)\n",
+    "    bbox = ee.Geometry.Polygon(coords, proj = 'EPSG:32733', evenOdd = False)\n",
     "    \n",
     "    # retrieve MODIS 250m image for geometry\n",
     "    modis = ee.ImageCollection('MODIS/061/MOD09GQ') \\\n",
     "        .filterDate(start_date, end_date) \\\n",
-    "        .filterBounds(bbox) \\\n",
+    "        .filterBounds(enp_geom) \\\n",
     "        .select(['sur_refl_b02', 'sur_refl_b01']) \n",
     "    \n",
     "    modis_prev_week = ee.ImageCollection('MODIS/061/MOD09GQ') \\\n",
     "        .filterDate(start_date_prev_week, end_date_prev_week) \\\n",
-    "        .filterBounds(bbox) \\\n",
+    "        .filterBounds(enp_geom) \\\n",
     "        .select(['sur_refl_b02', 'sur_refl_b01']) \n",
     "    \n",
     "    # reproject image\n",
