Ran image retrieval with new projection EPSG:32733

--- a/image_retrieval_ssf.ipynb
+++ b/image_retrieval_ssf.ipynb
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "df21c7ba",
    "metadata": {},
    "outputs": [
@@ -723,6 +723,40 @@
       "\n",
       "\n",
       "Total number of images: 1\n",
+      "\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_11.tif\n",
+      "Generating URL ...\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/fd86ea40d51bf361114205b8722f9838-93ec9d4911ef679a4d110130108531b1:getPixels\n",
+      "Please wait ...\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_11.tif\n",
+      "\n",
+      "\n",
+      "Total number of images: 1\n",
+      "\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_04.tif\n",
+      "Generating URL ...\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/6f59c8d20eb7c75cbb2c45b3b452d89a-60cf4128054ac65a7df7582e5c963550:getPixels\n",
+      "Please wait ...\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_04.tif\n",
+      "\n",
+      "\n",
+      "Total number of images: 1\n",
+      "\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_12.tif\n",
+      "Generating URL ...\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/f3bbf1038eb0d2101e3002a4838b6627-477a916a821e3d0f6a22fd6d7f6f4589:getPixels\n",
+      "Please wait ...\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_12.tif\n",
+      "\n",
+      "\n",
+      "Total number of images: 1\n",
+      "\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_05.tif\n",
+      "Generating URL ...\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/b898d5896f6aa7a79e3bd52193efd25a-36ac7a846cf81b54b27c6cfd2f0b51a4:getPixels\n",
+      "Please wait ...\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2008_11_05.tif\n",
+      "\n",
       "\n"
      ]
     }
