Added filter date at the end to not export images that could have been used for gap filling, only take dates of interest

--- a/image_retrieval_downscaling.ipynb
+++ b/image_retrieval_downscaling.ipynb
@@ -1737,6 +1737,9 @@
     }
    ],
    "source": [
+    "# filter MODIS dates to only take dates of interest, exclude images that were used for gap filling (if gap filled)\n",
+    "modis = modis_clipped.filterDate(start_date, end_date)\n",
+    "\n",
     "# export MODIS image collection to local repository \n",
     "# source: https://github.com/gee-community/geemap/blob/master/examples/notebooks/11_export_image.ipynb\n",
     "geemap.ee_export_image_collection(modis_clipped, out_dir = out_dir_m)"
