Fixed typo in dataset I was calling to call MODIS 8-day composite instead of daily images

--- a/image_retrieval_ssf_modis8d.ipynb
+++ b/image_retrieval_ssf_modis8d.ipynb
@@ -590,59 +590,59 @@
      "output_type": "stream",
      "text": [
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/474818a17d09974aa88b2c51f2c98858-b158ed1f75f5b0f92685d978200a7326:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/f4f209ec90eea1b31091b3994977c7f3-28b5e015d64aace813063f476168b2c9:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/8_day_2027/2008_11_06.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/ddeb91f589e4f8fb08a8674f893b10a5-ccb30fb7330eed3c687b06a158a2f867:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/5cc084698038ba568a752257ba3c11a6-aef198576aa204517208ac339bb296ac:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/8_day_2027/2008_10_30.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/8be6525f80d52267f843899f11102a99-156872a319e3fc5ccbfc918695f06885:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/cb6bee44e1e4850625f0a6b44a7cbbb0-011a69cd5274878b7dc32582f61122c3:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/8_day_2027/2008_11_07.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/4732f1e332d1976a0c5f90aca9be9004-0e82325a3f5f2cfe8a470aa445331ce7:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/a3b761671aca536f85ef83ab91439bf8-8b994fd5888a0c0cbb1c7a54a0396fa6:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/8_day_2027/2008_10_31.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/3570b84cd5b69c6f8e15194f66260b1a-9d192a06c00d703279b995fcde187e3d:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/43ffae060bc0f92b437ba8cc3969ff66-54c226dc439ce0c193da572c532ae193:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/8_day_2027/2008_11_08.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/8b1e78599700b9ac8eb1e10645e89281-4c862323d355e6a9c176384368dd5952:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/09b0ca5633d1f65157827927c7229350-2b80768c17e71c94a3dfb6c62afe8a4d:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/8_day_2027/2008_11_01.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/369c8d8b446c6011652fd44424b319bf-0b2352a77129d4ab838e2d8dd70642a5:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/e4f4e4775b24a9b2280f9142648a1040-9e668e7e2e4996b88be022e8f0236ca4:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/8_day_2027/2008_11_09.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/92ee2807b40350faff846deeaa41a6d8-80c647bdd02de81b0504759983751485:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/7d10a2ddcd896a86a3d2f93a89b8203d-3f12d323a6db447fc1e3214a85cbd3f5:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/8_day_2027/2008_11_02.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/0d8ad087fc2b220cd2cdb9abcb5c3e43-3963cb942f51ad2ad65dc48be1190def:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/e808c2b6a10c9a7b419ac652fdde1da2-b93dd1fdadeac81a916e2a1b95b5ed13:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/8_day_2027/2008_11_10.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/907db5b592d576e28b887500249827c3-e74bdec62157af41d420675d520fa2de:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/fd5dcd1318690c1107506a1f2d43c313-5b07ead8fa7aeb22f417cd8ce90a0809:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/8_day_2027/2008_11_03.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/41d149f794166341bea4b60b8fb15ff8-851be1bb156b36c5090b226c0eada297:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/08f820d11c033cae28b050ef536e7b91-b958f694cc39f1881439f1f3f1e81cba:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/8_day_2027/2008_11_11.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/ee1c082c4b3dad53c0d1be20946a7b2c-b16371d85a8546df4192f863cd07a14e:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/d7dbf8295c7f20cd35804ead5ba40681-5b7adf405e31bb4e2585025111a35cbe:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/8_day_2027/2008_11_04.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/5ebf5c8d7aa374e73eec6d7b6f17a449-159e37217f7e6e4e288494ce6b2d40c7:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/f2833ec9fc47233d38324acac76b8cca-5b4628330a2b5ef6e202fb951926114c:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/8_day_2027/2008_11_12.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/e98ed17e071207dcafbcd88a95f829bb-05f1da1c1aa3c485f002b6b1c6d49889:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/1cf5ee04058beb9a3c949c4d54a0e6ff-21543888fb4042386c20b64f7800fd89:getPixels\n",
       "Please wait ...\n",
       "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/8_day_2027/2008_11_05.tif\n"
      ]
@@ -678,14 +678,14 @@
     "    \n",
     "    # retrieve MODIS 8 day 250m composite image for geometry \n",
     "    # source: https://developers.google.com/earth-engine/apidocs/ee-date-advance#colab-python\n",
-    "    modis = ee.ImageCollection('MODIS/061/MOD09GQ') \\\n",
+    "    modis = ee.ImageCollection('MODIS/061/MOD09Q1') \\\n",
     "        .filterDate(ee.Date(start_date, 'Africa/Maputo').advance(ee.Number(8).multiply(-1), 'day'), ee.Date(start_date, 'Africa/Maputo').advance(ee.Number(1), 'day')) \\\n",
-    "        .filterBounds(enp_geom) \\\n",
+    "        .filterBounds(large_region) \\\n",
     "        .select(['sur_refl_b02', 'sur_refl_b01'], ['nir', 'red']) \n",
     "    \n",
-    "    modis_prev_week = ee.ImageCollection('MODIS/061/MOD09GQ') \\\n",
+    "    modis_prev_week = ee.ImageCollection('MODIS/061/MOD09Q1') \\\n",
     "        .filterDate(ee.Date(start_date_prev_week, 'Africa/Maputo').advance(ee.Number(8).multiply(-1), 'day'), ee.Date(start_date_prev_week, 'Africa/Maputo').advance(ee.Number(1), 'day')) \\\n",
-    "        .filterBounds(enp_geom) \\\n",
+    "        .filterBounds(large_region) \\\n",
     "        .select(['sur_refl_b02', 'sur_refl_b01'], ['nir', 'red']) \n",
     "    \n",
     "    # reproject image\n",
